plugins {
    id "se.inera.intyg.plugin.common" version "3.1.0" apply false
    id "org.gretty" version "3.0.1" apply false
    id "com.moowork.node" version "1.3.1" apply false
    id "io.spring.dependency-management" version "1.0.9.RELEASE" apply false
}

ext {
    infraVersion = System.properties['infraVersion'] ?: '3.13.1-SNAPSHOT'
    refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'

    ppSchemasVersion = "1.0.5"
    ppTermsSchemasVersion = "1.0.5"

    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5"

    schemasContractVersion = "2.1.8"

    aspectJVersion = "1.6.11"
    commonsCodecVersion = "1.10"
    //commonsIOVersion = "2.4"
    commonsIOVersion = "2.6"
    commonsLangVersion = "3.1"
    cxfVersion = "3.2.4"
    geronimoJmsVersion = "1.1.1"
    //groovyVersion = "2.3.6"
    groovyAllVersion = "2.4.19"
    //guavaVersion = "27.0.1-jre"
    guavaVersion = "28.2-jre"
    hibernateVersion = "5.3.15.Final"
    hibernateEntityManagerVersion = "4.3.11.Final"
    hibernateJpaVersion = "1.0.0.Final"
    hikariCPVersion = "2.3.5"
    jadiraUserTypeVersion = "6.0.1.GA"
    jacksonVersion = "2.8.1"
    javaxMailVersion = "1.5.2"
    jaxb2Version = "1.11.1"
    jaxbXjcVersion = "2.3.2"
    jaxbCoreVersion = "2.3.0.1"
    jaxbImplVersion = "2.3.2"
    jsonSimpleVersion = "1.1.1"
    jstlVersion = "1.2"
    liquibaseVersion = "3.3.1"
    logbackVersion = "1.2.3"
    mysqlVersion = "5.1.40"
    restAssuredVersion = "2.9.0"
    servletApiVersion = "3.1.0"
    slf4jVersion = "1.7.10"
    springContextVersion = "4.3.16.RELEASE"
    springDataJpaVersion = "1.11.12.RELEASE"
    springSecurityExtensionsVersion = "1.0.3.RELEASE"
    springSecurityVersion = "4.2.5.RELEASE"
    springSessionVersion = "1.3.3.RELEASE"
    springWsCoreVersion = "2.2.2.RELEASE"
    //stringTemplateVersion = "4.0.8"
    stringTemplateVersion = "4.3"
    springDataRedisVersion = "1.8.12.RELEASE"
    //swaggerVersion = "2.4.0"
    swaggerVersion = "2.9.2"
    //swaggerJaxRsVersion = "1.5.4"
    swaggerJaxrsVersion = "1.6.0"
    //unitilsVersion = "3.3"
    unitilsVersion = "3.4.6"
    //usertypeVersion = "5.0.0.GA"
    wsdl4jVersion = "1.6.3"
    //shedlockSpringVersion = "0.18.2"
    shedlockSpringVersion = "4.5.0"

    h2Version = "1.3.171"
    junitVersion = "4.12"
    hamcrestVersion = "1.3"
    mockitoAllVersion = "1.10.19"

    nodeJsVersion = "10.16.2"
    npmVersion = "6.10.3"

    springbootMavenBomVersion = "2.2.5.RELEASE"
}

allprojects {
    repositories {
        mavenLocal()
        maven {
            url "https://build-inera.nordicmedtest.se/nexus/repository/public/"
        }
        jcenter {
            content {
                // this repository contains everything BUT artifacts with group starting with "se.inera"
                excludeGroupByRegex "se\\.inera.*"
            }
        }
    }

    // Errorprone has no mechanism (yet) for excluding generated code. We therefore disable it for hsa-integration.
    ext.errorproneExclude = "privatlakarportal-hsa-integration"

    apply plugin: 'se.inera.intyg.plugin.common'
    apply plugin: 'maven'
    apply plugin: "io.spring.dependency-management"

    dependencyManagement {
        imports { mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}" }
    }

    dependencies {
        // Exclude and import of non-BOM version of Hibernate due to
        // bug in BOM-version 5.4.12.
        compile("org.hibernate:hibernate-core") {
            version {
                strictly "${hibernateVersion}"
            }
        }
        compile("org.hibernate:hibernate-hikaricp") {
            version {
                strictly "${hibernateVersion}"
            }
        }
        compile("org.hibernate:hibernate-entitymanager") {
            version {
                strictly "${hibernateVersion}"
            }
        }
        compile "javax.annotation:javax.annotation-api"
        compile "jakarta.xml.bind:jakarta.xml.bind-api"
        compile "ch.qos.logback:logback-classic"
        compile "org.slf4j:slf4j-api"

        testCompile "se.inera.intyg.refdata:refdata:${refDataVersion}"
        testCompile "junit:junit:4.+"
        testCompile "org.mockito:mockito-core"
        testCompile "org.springframework:spring-test"
    }

    group = 'se.inera.privatlakarportal'
    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'

    sourceCompatibility = 11
    targetCompatibility = 11

    task createVersionPropertyFile(type: VersionPropertyFileTask)

    uploadArchives.enabled = false

    uploadArchives.repositories.mavenDeployer {
        repository(url: "https://build-inera.nordicmedtest.se/nexus/repository/releases/") {
            authentication(userName: System.properties['nexusUsername'], password: System.properties['nexusPassword'])
        }
    }
}

task tagRelease(type: TagReleaseTask)

def environment = project.findProperty('env') ?: "local"
se.inera.intyg.IntygPluginKt.addProjectPropertiesFromFile(project, file("$rootDir/env-properties/${environment}/settings.properties"))
